--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOD98d4gMVOwoqbwlTf9xX5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,33 +33,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5S2nNb1x-yQ2",
-        "outputId": "79587373-14fb-4d88-8017-8f654f3f3059"
+        "outputId": "4630c26d-b282-4edf-ca9a-189aeb376fd8"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Step 1:\n",
-            "Cleaning A...\n",
-            "Environment state: {'A': 'clean', 'B': 'dirty'}\n",
-            "--------------------\n",
-            "Step 2:\n",
-            "Moved to B.\n",
-            "Environment state: {'A': 'clean', 'B': 'dirty'}\n",
-            "--------------------\n",
-            "Step 3:\n",
-            "Cleaning B...\n",
-            "Environment state: {'A': 'clean', 'B': 'clean'}\n",
-            "--------------------\n",
-            "Step 4:\n",
-            "Moved to A.\n",
-            "Environment state: {'A': 'clean', 'B': 'clean'}\n",
-            "--------------------\n",
-            "Step 5:\n",
-            "Moved to B.\n",
-            "Environment state: {'A': 'clean', 'B': 'clean'}\n",
-            "--------------------\n"
+            "Using BFS:\n",
+            "Path to solution: [(4, 0), (1, 3), (1, 0), (0, 1), (4, 1), (2, 3), (2, 0)]\n",
+            "\n",
+            "Using DFS:\n",
+            "Path to solution: [(4, 0), (4, 3), (0, 3), (3, 0), (3, 3), (4, 2), (0, 2), (2, 0)]\n"
           ]
         }
       ],
