--- a/mba.ipynb
+++ b/mba.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOvrqNJDFkjEPguZ82P8FuO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +27,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5S2nNb1x-yQ2",
-        "outputId": "79587373-14fb-4d88-8017-8f654f3f3059"
+        "outputId": "dc67c8e8-78ca-4f39-85a6-acaee48de62c"
       },
       "outputs": [
         {
@@ -43,24 +42,20 @@
           "text": [
             "Step 1:\n",
             "Cleaning A...\n",
-            "Environment state: {'A': 'clean', 'B': 'dirty'}\n",
+            "Model state: {'A': 'clean', 'B': 'dirty', 'C': 'clean'}\n",
+            "Environment state: {'A': 'clean', 'B': 'dirty', 'C': 'clean'}\n",
             "--------------------\n",
             "Step 2:\n",
             "Moved to B.\n",
-            "Environment state: {'A': 'clean', 'B': 'dirty'}\n",
+            "Model state: {'A': 'clean', 'B': 'dirty', 'C': 'clean'}\n",
+            "Environment state: {'A': 'clean', 'B': 'dirty', 'C': 'clean'}\n",
             "--------------------\n",
             "Step 3:\n",
             "Cleaning B...\n",
-            "Environment state: {'A': 'clean', 'B': 'clean'}\n",
+            "Model state: {'A': 'clean', 'B': 'clean', 'C': 'clean'}\n",
+            "Environment state: {'A': 'clean', 'B': 'clean', 'C': 'clean'}\n",
             "--------------------\n",
-            "Step 4:\n",
-            "Moved to A.\n",
-            "Environment state: {'A': 'clean', 'B': 'clean'}\n",
-            "--------------------\n",
-            "Step 5:\n",
-            "Moved to B.\n",
-            "Environment state: {'A': 'clean', 'B': 'clean'}\n",
-            "--------------------\n"
+            "All rooms are clean.\n"
           ]
         }
       ],
